Re-export generated types with better lenses
Users of the alertmanager-client package were previously required to
also depend on the alertmanager-openapi package to access certain types
that were used throughout the API.

This replaces that usage with a re-export from a module controlled by
alertmanager-client, as well as modifying the way the types are exposed
to be consistent with the rest of the package in terms of smart
constructor and lens usage.

--- a/alertmanager-client/alertmanager-client.cabal
+++ b/alertmanager-client/alertmanager-client.cabal
@@ -15,8 +15,10 @@ extra-source-files:  README.md
 library
   hs-source-dirs:      src
   exposed-modules:     Network.Alertmanager.Client.Class
+                     , Network.Alertmanager.Client.Core
                      , Network.Alertmanager.Client.Query
                      , Network.Alertmanager.Client.Trans
+                     , Network.Alertmanager.Client.Types
 
                      , Network.Alertmanager.Client.DeleteSilence
                      , Network.Alertmanager.Client.GetSilence
@@ -31,7 +33,10 @@ library
                      , Network.Alertmanager.Client.GetReceivers
 
                      , Network.Alertmanager.Client.GetStatus
+
   other-modules:       Network.Alertmanager.Client.Query.Internal
+                     , Network.Alertmanager.Client.Types.Internal
+
   build-depends:       base >= 4.7 && < 5
                      , alertmanager-openapi >= 0.0.1 && < 0.0.2
                      , http-client >= 0.5 && < 0.7
